--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://joedoe.github.io/eddys-portfolio",
+  "homepage": "http://eddypinarello.github.io/eddys-portfolio",
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
